add keyfile support

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,3 +5,4 @@ mongodb_port: 27017
 mongodb_bind_ip: 0.0.0.0
 mongodb_admin_user: "admin"
 mongodb_admin_password: "change_me"
+mongodb_keyfile_path: /etc/mongodb.keyfile
