Ensure mongo shell client is installed
- Install `mongodb-org-shell` alongside `mongodb-org` so that the `mongo` client is available for replica set and user creation commands.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,7 +11,9 @@
 
 - name: Install MongoDB packages
   ansible.builtin.apt:
-    name: mongodb-org
+    name:
+      - mongodb-org
+      - mongodb-org-shell
     state: present
     update_cache: yes
 
